# FileFormer

./: .gitattributes  Dockerfile  Readme.md  __init__.py  environment.yml  pyproject.toml  requirements.txt  train.py
.github/workflows/: main.yaml
RL_method/: __init__.py
RL_method/env/: __init__.py  environment.py
RL_method/model/: __init__.py  critic.py
config/: config.yml  model_conf.json
emb_model/: model.py  test.ipynb
engine/: engine.py
file_dataset/: dataset.py  test.ipynb
file_dataset/dataset/: dataset.part.aa  dataset.part.ab  dataset.part.ac  dataset.part.ad  dataset.part.ae  dataset.part.af  dataset.part.ag  dataset.part.ah  dataset.part.ai  dataset.part.aj
notebook/: decoder.ipynb  encoder.ipynb  optimization.ipynb  testing_compressing.ipynb
notus/: __init__.py  all_file_ext.py  eval.py
notus/engine/: __init__.py  compress_unit.py  engine.py
notus/file_dataset/: __init__.py  data.ipynb  dataset.py  gen.py
notus/tokenizer/: BLT.py  BPE.py  __init__.py  all_file_ext.py  merges.txt  train_BPE.py  utils.py
notus/train/: dataset.pt  merges.txt  train.py
notus/transformer_model/: __init__.py  attention_viz.ipynb  decoder.ipynb  encoder.ipynb  eval.py  license.txt  model.py  utils.py
test/: compress_test.py  merges.txt  merges4test.txt  model_test.py  tokenizer_test.py  vocab.json  vocab4test.json
tokenizer/: .test.ipynb  BPE.py  __init__.py  bpe_merges.txt  deprecated_module.py  module.py  vocab.json
train/: merges.txt  train.py  vocab.json
transformer_model/: __init__.py  dataset.pt  dataset512.pt  embedding_layer.py  model.py  model_test.py  position_encoding.py  test.ipynb  train.ipynb  train.py  train_compress.ipynb
(+9 files in other folders)
