[tool.poetry]
name = "Notus"
version = "0.2.3"
description = ""
authors = ["Qwest1204 <workemailfordaniil@gmail.com>"]
readme = "Readme.md"
packages = [
    { include = "notus", from = "." }
]


[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
matplotlib = "^3.10.3"
polars = "^1.29.0"
notebook = "^7.4.2"
pandas = "^2.2.3"
torchvision = "^0.22.0"
torchaudio = "^2.7.0"
torchinfo = "^1.8.0"
torchsummary = "^1.5.1"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
